# mikron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
boot/: CMakeLists.txt  linker.ld  startup.s
cmake/: FindQemu.cmake  arm-none-eabi.toolchain.cmake  toolchain-arm32.cmake
drivers/: mmio.h  serial.h
include/: common.h
include/arch/arm/: armv6.h
include/kernel/: serial.h
kernel/: CMakeLists.txt  fdt.c  fdt.h  kdef.h  kmain.c  kmem.c  kmem.h  kutil.h  main.c  uart.h
libc/: CMakeLists.txt  memory.c  string.c
libc/include/: memory.h  stddef.h  string.h
platform/: bcm2835.cmake
platform/bcm2835/: bcm2835_mmio.c  bcm2835_peripherals.h  bcm2835_serial.c  linker.ld  startup.s
platform/bcm2835/drivers/: mmio.c  serial.c
